fixed dark mode not being the default

--- a/Frontend/app/globals.css
+++ b/Frontend/app/globals.css
@@ -8,7 +8,7 @@
   /* color-scheme: dark; */
 }
 
-@media (prefers-color-scheme: dark) {
+@media {
   :root {
     --background: #000;
     --foreground: #ededed;
